--- a/front/www/view.css
+++ b/front/www/view.css
@@ -1,14 +1,15 @@
+/* generic styling */
 body
 {
 	background:#336699;
 
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:normal;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size:16px;
 	text-align:center;
 	line-height:130%;
 
 	color:#000;	
-	margin:8px auto 16px auto;
+	margin:0 auto 0 auto;
 	min-width:500px;
 	max-width:95%;
 }
@@ -17,7 +18,7 @@ body
 {
 	display:block;
 	height:30px;
-	margin:0 5px 0 5px;
+	margin:0;
 	width:auto;
 	background-image:url("top.png");
 	background-position:bottom;
@@ -29,7 +30,7 @@ body
 {
 	display:block;
 	height:30px;
-	margin:0 5px 0 5px;
+	margin:0;
 	width:auto;
 	background-image:url("bottom.png");
 	background-position:top;
@@ -40,72 +41,110 @@ body
 #content
 {
 	text-align:left;
-	padding:0 5px 0 5px;
+	padding:0 2px 10px 2px;
 }
 
-
-#top
+#window
 {
-	margin:0 -5px 0 -5px;
+	border-radius: 10px;
 	background:#fff;
 	width:auto;
 }
 
-#topbar
+#top
 {
-	display:block;
-	background-color:hsl(214, 64%, 65%);
-	padding:0 0;
-	margin:0 0;
-	height:30px;
+	width:auto;
 }
 
+
+
+/* title bar and logo */
 #toptitle
 {
-	font-size:160%;
-	font-weight:800;
-	margin:5px 0 10px 0;
-	text-align: center;
+	padding:25px 0 15px 20px;
+	text-align: left;
+	border-radius: 10px;
+	background-color: hsl(215, 50%, 100%);
 }
 
+#toptitle h1
+{
+	font-size:180%;
+	font-weight:800;
+	letter-spacing: 3px;
+	color: hsl(215, 30%, 20%);
+	text-shadow: 3px 3px 5px #999;
+	margin: 0px;
+}
+
+#toptitle p
+{
+	font-size:120%;
+	font-weight:400;
+	letter-spacing: 2.3px;
+	color: hsl(215, 30%, 30%);
+	text-shadow: 3px 3px 5px #bbb;
+	font-style:italic;
+	margin: 10px 0 0 0;
+}
+
+
+/* menubar */
 #topmenubar
 {
 	display:block;
-	background-color:hsl(214, 64%, 95%);
+	border-radius: 10px;
+	background-color:hsl(215, 30%, 85%);
 	padding:10px 10px;
-	margin:0 0 10px 0;
+	margin:10px 10px 30px 10px;
+
 }
 
 #topmenubar button
 {
-	margin: 10px 0 5px 0;
-	height: 30px;
+	background-color: hsl(215, 30%, 30%);
+	border: 2px solid  hsl(215, 30%, 30%);
+	color: white;
+
+	border-radius: 10px;
 	font-size: 105%;
+	text-align: center;
+	text-decoration: none;
+
+	display: inline-block;
+	margin: 0 5px 0 0;
+	height: 40px;
+}
+
+#topmenubar button.selected {
+	background-color: hsl(215, 30%, 95%);
+	color: black;
+}
+
+#topmenubar button:hover {
+	background-color: #fff;
+	color: black;
 }
 
 
-#window
+/* render window where page is loaded into */
+#render
 {
-	margin:0 5px 0 5px;
-	padding:0 5px 10px 5px;
-
-	background:#fff;
-	width:auto;
+	border-radius: 10px;
+	margin: 0 10px;
 }
 
-
-
+/* footer */
 #footer
 {
-	width:100%;
 	clear:both;
 	color:#999;
 	text-align:center;
 
 	border-top:2px dotted #ccc;
-	margin-top: 10px;
+	margin: 15px 15px 0 15px;
 	padding-top: 10px;
-	padding-bottom: 0px;
+	padding-bottom: 10px;
 	font-size: 85%;
 }
 
@@ -117,17 +156,12 @@ img
 
 
 /* styling of text */
-
-.form_description
-{
-	display:block;
-	margin:0 0 0 0;
-}
-
 h1
 {
 	font-size:160%;
-	font-weight:800;
+	font-weight:400;
+
+	color:hsl(215, 30%, 10%);
 	margin:0 0 10px 0;
 }
 
@@ -138,7 +172,7 @@ h2
 	border-bottom:2px dotted #ccc;
 	font-size:140%;
 	font-weight:400;
-	color:#222;
+	color:hsl(215, 30%, 30%);
 	margin:25px 0 10px 0;
 }
 
@@ -152,7 +186,7 @@ h3
 	padding-top: 10px;
 	font-size:120%;
 	font-weight:400;
-	color: #222;
+	color:hsl(215, 30%, 30%);
 	text-decoration-line: underline;
 	text-decoration-style: line;
 	text-decoration-color: #ccc;
@@ -171,21 +205,13 @@ p
 }
 
 
-
-.invisible
+li
 {
-	display: none;
+	margin-bottom: 15px;
 }
 
-.visible
-{
-	display: block;
-}
 
-.group p{
-	margin:0.1em 0 1em 0;
-}
-
+/* div groups and options */
 .group
 {
 	display: block;
@@ -198,21 +224,38 @@ p
 	border-bottom:none;
 }
 
-
-/* styling of table */
-/*
-table, td, th
-{
-	border: 1px solid gray;
-	border-collapse: separate;
+.group p{
+	margin:0.1em 0 1em 0;
 }
 
-table td, table th
+.invisible
 {
-	padding: 10px;
+	display: none;
 }
-*/
 
+.visible
+{
+	display: block;
+}
+
+.greybox
+{
+	background-color: hsl(215, 30%, 95%);
+	border: 0;
+	border-radius: 10px;
+	padding: 10px 10px;
+}
+
+.block
+{
+	display:inline-block;
+	margin: 5px 5px;
+	vertical-align: top;
+}
+
+
+
+/* tables */
 table
 {
   border-collapse: collapse;
@@ -227,54 +270,8 @@ td, th
 }
 
 
-/* pageturner buttons */
-
-.group.pageturner{
-	width: 100%;
-	height: 55px;
-	position: relative;
-  padding-bottom: 5px;
-}
-
-.group.pageturner > .pageturner_button_previous
-{
-	display: inline-block;
-
-	margin: 0 0 0 0;
-	padding: 0 0 0 0;
-	position: absolute;
-}
-
-.group.pageturner > .pageturner_button_next
-{
-	display: inline-block;
-
-	margin: 0 0 0 0;
-	padding: 0 0 0 0;
-	position: absolute;
-
-	left: 140px;
-}
-
-.group.pageturner input
-{
-	width: 120px;
-}
-
-
-.block
-{
-	display:inline-block;
-	padding: 10px 10px;
-	margin: 5px 5px;
-	background-color: #efefef8c;
-	border: 0;
-	border-radius: 10px;
-	vertical-align: top;
-}
 
 /* form inputs/labels */
-
 label
 {
 	clear:both;
@@ -282,7 +279,6 @@ label
 	line-height: 1.4em;
 	padding: 6px 0 2px 0;
 }
-
 
 label.choice
 {
@@ -292,7 +288,6 @@ label.choice
 	margin: -30px 0 0 25px;
 	padding: 0 0 15px 0;
 }
-
 
 label.checkbox
 {
@@ -343,52 +338,13 @@ input[type=radio]
 	height: 40px;
 }
 
-.parameters_configuration .explanation
-{
-	margin-top: 20px;
-	margin-bottom: 0px;
-	display: block;
-}
-
-.parameters_configuration .description
-{
-	border:none;
-	display:inline-block;
-	width: 225px;
-	line-height:150%;
-	padding:7px 0 1px;
-	font-family: monospace;
-	font-size: larger;
-}
-
-.parameters_configuration .element
-{
-	display:inline-block;
-	width:50px;
-	margin-right: 5px;
-}
-
-.parameters_configuration div
-{
-
-	display:block;
-}
-
-.parameters_configuration .figure
-{
-	display: block;
-	width: 100%;
-	max-width: 480px;
-	margin: 25px 0 15px 0;
-}
-
 
 
 
 .flexcontainer{
 	display: flex;
 	flex-flow: row wrap;
-	gap: 30px;
+	gap: 20px;
 }
 
 .flexdiv-sm{
@@ -404,6 +360,8 @@ input[type=radio]
 	flex-grow: 3;
 }
 
+
+/* liveview layout */
 #values {
 	font-size: small;
 
@@ -411,8 +369,6 @@ input[type=radio]
 }
 
 #plot {
-	margin-top: 30px;
-
 	flex-grow: 2;
 	flex-basis: 800px;
 }
