--- a/front/www/view.css
+++ b/front/www/view.css
@@ -206,6 +206,7 @@ h3.first {
 
 p {
   margin: 5px 0 10px;
+  max-width: 800px;
 }
 
 li {
@@ -267,6 +268,7 @@ label {
   display: block;
   line-height: 1.4em;
   padding: 6px 0 2px 0;
+  max-width: 800px;
 }
 
 label.choice {
